    \item Added examples of converting from PLINK and VCF in Formats vignette.
  }
}
\section{Changes in version 1.13.3}{
  \itemize{
    \item Bug fix in imputedDosageFile - for IMPUTE2, include columns
  from .samples file in output scan annotation.
  }
}
\section{Changes in version 1.13.6}{
  \itemize{
    \item Add getGenotypeSelection to select non-continguous SNPs and scans from GDS files.
  }
}
\section{Changes in version 1.13.7}{
  \itemize{
    \item Add dupDosageCorAcrossDatasets.
    \item Add getGenotypeSelection method to MatrixGenotypeReader.
  }
}
\section{Changes in version 1.13.8}{
  \itemize{
    \item Add drop=TRUE argument to getVariable, etc.
  }
}
\section{Changes in version 1.13.9}{
  \itemize{
    \item Add use.names argument to getGenotype and getGenotype selection
    \item Add order=c("file", "selection") argument to getGenotypeSelection
    \item duplicateDiscordanceAcrossDatasets and dupDosageCorAcrossDatasets will not match on unmapped SNPs
  }
}
\section{Changes in version 1.13.21}{
  \itemize{
    \item assocRegression replaces assocTestRegression. Only one model is allowed per function call.
    \item assocCoxPH replaces assocTestCPH. Output format is now similar to assocRegression.
    \item exactHWE replaces gwasExactHWE.
    \item assocRegression, assocCoxPH, and exactHWE include the option to select blocks of SNPs by index for easier parallelization.
    \item scan.chromosome.filter is no longer an option; use setMissingGenotypes to filter data prior to running other functions.
  }
}
\section{Changes in version 1.13.22}{
  \itemize{
    \item Removed "outfile" arguments from batchChisqTest, batchFisherTest, and mendelErr. Saving output to a file should happen outside the function calls.
    \item batchChisqTest and batchFisherTest have snp.include arguments to run on individual SNPs. Using batchFisherTest with this argument is recommended to replace the deprecated assocTestFisherExact.
  } 
}
